.provarCaches/00D5f000005vwGkEAI/objects/rstk__icitmusag__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_icitmusag</customHelpPage>
    <description>icitmusag__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icitmusag_item__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  TEXT(rstk__icitmusag_per__c) &amp; &apos;_&apos; &amp;  TEXT(rstk__icitmusag_fyr__c)</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__icitmusag_item__r.rstk__icitem_item__r.rstk__peitem_item__c + &apos;_&apos; +  TEXT(rstk__icitmusag_fyr__c) + &apos;_&apos; +  TEXT(rstk__icitmusag_per__c)</formula>
        <inlineHelpText>Internal formula for constructing the associated name field.</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__icitmusag_div__r.rstk__sydiv_div__c + &apos; &apos; +  rstk__icitmusag_item__r.rstk__icitem_item__r.rstk__peitem_item__c</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icitmusag_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Item Usage Division</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Inventory Item Usage</relationshipLabel>
        <relationshipName>divicitmusags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icitmusag_fyr__c</fullName>
        <description>This is the Year of the transaction date (YYYY/MM/DD) 

Each time this is updated, it will also set the Item’s Current Period Year (ICITEMCST_CURUSAGEFYR) to this value. (DD)</description>
        <inlineHelpText>Transaction Date Year</inlineHelpText>
        <label>Fiscal Year</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icitmusag_item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Item Number for which this usage record applies.</inlineHelpText>
        <label>Item Number</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Inventory Item Usage</relationshipLabel>
        <relationshipName>icitmusags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icitmusag_per__c</fullName>
        <description>This is the Month of the transaction date (YYYY/MM/DD) 

Each time this is updated, it will also set the Item’s Current Period (ICITEMCST_CURPRD) to this value. (DD)</description>
        <inlineHelpText>Transaction Date Month</inlineHelpText>
        <label>Period</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icitmusag_prdcost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>In a standard cost system this is recomputed each time this record is updated as follows: 

ICITMUSAG_PRDCOST = ICITMUSAG_PRDCOST + (Transaction Quantity * ICITEMSTD_ STDUCSTTOT) 

Note: If this is a reversal then the computation will be a decrement to the Period Cost 

In a Weighted Average cost system this is recomputed each time this record is updated as follows: 

First the Unit Cost is set to the following: 

Unit Cost = ICITEMCST_ACTUCSTTOT 

ICITMUSAG_PRDCOST = ICITMUSAG_PRDCOST + (Transaction Quantity * Unit Cost) 

Note: If this is a reversal then the computation will be a decrement to the Period Cost 

Each time this is updated, it will also set the Item’s Current Period Cost (ICITEMCST_CURPRDCOST) to this value. (DD)</description>
        <inlineHelpText>Total Average or Standard Cost for this Item usage Period</inlineHelpText>
        <label>Period Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icitmusag_prdqty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the Item’s Usage for the Period 

The Item’s Usage for the period will be augmented on a decrement to Inventory is a Purchase Order Issue, a Work Order Issue, a Sales Order Fulfillment, an Inventory Adjustment Down, and an Inventory Scrap. If there is a reversal of a Purchase Order Issue, or a Work Order Issue, or a Sales Order Fulfillment or an Inventory Scrap, then this will deduct from the usage. 

This field is updated by the transaction’s quantity. (DD)</description>
        <inlineHelpText>Item&apos;s Usage for the Period</inlineHelpText>
        <label>Period Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Inventory Item Usage</label>
    <listViews>
        <fullName>rstk__RS_Inventory_Item_Usage</fullName>
        <columns>NAME</columns>
        <columns>rstk__icitmusag_div__c</columns>
        <columns>rstk__icitmusag_item__c</columns>
        <columns>rstk__icitmusag_prdqty__c</columns>
        <columns>rstk__icitmusag_prdcost__c</columns>
        <columns>rstk__icitmusag_per__c</columns>
        <columns>rstk__icitmusag_fyr__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Inventory Item Usage</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Item Usage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Fiscal_Year_Range</fullName>
        <active>false</active>
        <description>Invalid Fiscal Year. Value must be between 2000 and 2199</description>
        <errorConditionFormula>rstk__icitmusag_fyr__c &lt; 2000 ||  rstk__icitmusag_fyr__c &gt; 2199</errorConditionFormula>
        <errorMessage>Invalid Fiscal Year. Value must be between 2000 and 2199</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Period_Range</fullName>
        <active>true</active>
        <description>Invalid Period. Value must be between 1 and 13.</description>
        <errorConditionFormula>rstk__icitmusag_per__c &lt; 1 ||  rstk__icitmusag_per__c &gt; 13</errorConditionFormula>
        <errorMessage>Invalid Period. Value must be between 1 and 13.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__item_validation</fullName>
        <active>true</active>
        <description>Division must match Item number Division</description>
        <errorConditionFormula>rstk__icitmusag_item__r.rstk__icitem_div__c != rstk__icitmusag_div__c</errorConditionFormula>
        <errorMessage>Division must match Item number Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__prdcost_validation</fullName>
        <active>false</active>
        <description>Period Cost cannot be less than 0</description>
        <errorConditionFormula>rstk__icitmusag_prdcost__c &lt; 0</errorConditionFormula>
        <errorMessage>Period Cost cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__prdqty_validation</fullName>
        <active>false</active>
        <description>Period Qty cannot be less than 0</description>
        <errorConditionFormula>ISNEW() &amp;&amp; rstk__icitmusag_prdqty__c &lt; 0</errorConditionFormula>
        <errorMessage>Period Qty cannot be less than 0</errorMessage>
    </validationRules>
</CustomObject>